--- a/src/public/css/panel.css
+++ b/src/public/css/panel.css
@@ -1,99 +1,7 @@
-/* .dropdown-arrow {
-    width: auto;
-    height: 20px;
-    position: relative;
-    margin-left: auto;
-}
-.content {
-  overflow: hidden;
-}
-.row {
-  width: 100%; 
-  height: 100vh;
-}
+@import url("main.css");
+@import url("components/menu.css");
 
-#settings-button, 
-#users-button, 
-#records-button, 
-#groups-button, 
-#reports-button, 
-#access-button, 
-#export-button, 
-#admin-button, 
-#config-button {
-    border-bottom: 2px solid rgba(0, 0, 0, 0.2); 
-} */
-
-.aside {
-  background-color: #1e3dea;
-}
-
-/* .btn {
-  width: 100%;
-  height: 52px;
-  background-color: #4961E4;
-  font-size: 18px;
-}
-.admin-section {
-  margin-top: auto;
-  padding-bottom: 20px;
-} */
-th {
-  background-color: #1e3dea;
-}
-.header-row {
-  align-items: center;
-  height: 60px;
-}
-.header-row h1 {
-  margin: 0;
-  line-height: 60px;
-}
-.header-row .btn {
-  line-height: 40px;
-}
 .content {
   padding-top: 20px;
 }
 
-#settings-dropdown .btn,
-#users-dropdown .btn,
-#records-dropdown .btn,
-#access-dropdown .btn,
-#admin-dropdown .btn,
-#config-dropdown .btn {
-  line-height: 1;
-  padding: 10px; 
-  text-align: left;
-}
-
-.gbtn {
-  width: 20%;
-  height: 45px;
-  background-color: #4961e4;
-  font-size: 15px;
-}
-
-/* Para los botones con fondo negro */
-.btn-key:hover .btn-icon, 
-.btn-delete:hover .btn-icon {
-    color: red; /* Cambia a otro color en lugar de negro */
-}
-
-.row {
-    width: 100%;
-    height: 100vh;
-}
-.aside {
-    background-color: #1E3DEA;
-}
-.btn {
-    width: 100%;
-    height: 52px;
-    background-color: #4961E4;
-    font-size: 18px;
-}
-.admin-section {
-    margin-top: auto;
-    padding-bottom: 20px;
-}
