--- a/src/views/views.panel.ejs
+++ b/src/views/views.panel.ejs
@@ -6,8 +6,8 @@
     <title>Apex</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <!-- <link rel="stylesheet" href="/css/permisos.css"> -->
     <link rel="stylesheet" href="/css/panel.css">
+    <script src="https://kit.fontawesome.com/58e42bf76d.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="container-fluid">
@@ -66,10 +66,7 @@
                                             <button style="background-color: blue;" type="button" class="btn btn-edit btn-sm">
                                                 <i class="fa-solid fa-pen"></i>
                                             </button>
-<<<<<<< HEAD
                                             <button style="background-color: red;" type="button" class="btn btn-delete btn-sm">
-=======
-
                                             <button style="background-color: rgba(44, 42, 42, 0.395)" type="button" class="btn btn-edit btn-sm btn-action">
                                                 <i class="fa-solid fa-lock"></i>
                                                 <label for="">Bloquear Usuario</label>
@@ -81,7 +78,6 @@
                                                 <label for="">Revocar sesión</label>
                                             </button>
                                             <button style="background-color: red;" type="button" class="btn btn-delete btn-sm btn-action">
->>>>>>> origin/dev_FREDDY_GIRALDO
                                                 <i class="fa-solid fa-trash"></i>
                                             </button>
                                         </div>
