refactor: Menu y estilos

--- a/src/views/components/menu.ejs
+++ b/src/views/components/menu.ejs
@@ -1,11 +1,11 @@
 <div class="aside col-2 col-md-2 d-flex flex-column" style="color: white;">
     <div class="d-flex flex-column justify-content-between" style="flex-grow: 1;">
         <!-- Encabezado -->
-        <div class="header d-flex align-items-center justify-content-center mt-5">
+        <a class="header d-flex align-items-center justify-content-center mt-5 text-decoration-none" href="/panel">
             <img class="title" src="/img/estrella-afilada-medio-trazo 1.png" alt="Apex-Logo"
                 style="height: 50px; margin-right: 10px;">
             <h1 style="color: white; font-size: 30px; font-weight:700">Apex</h1>
-        </div>
+        </a>
         <!-- Contenido principal -->
         <div class="d-flex flex-column align-items-center justify-content-center mt-2" style="flex-grow: 1;">
             <!-- Logs Dropdown -->
