--- a/src/views/views.login.ejs
+++ b/src/views/views.login.ejs
@@ -7,7 +7,7 @@
     <title>Apex | Iniciar sesión</title>
   </head>
   <body>
-    <main>
+    <main class="login">
         <form class="formulario">
           <h1>BIENVENIDO A APEX</h1>
           <input type="text" placeholder="Ingrese su correo o usuario" id="usuario" required />
