--- a/src/views/views.registro.ejs
+++ b/src/views/views.registro.ejs
@@ -3,13 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<<<<<<< HEAD
-    <link rel="stylesheet" href="/css/login.css">
+    <link rel="stylesheet" href="/css/registro.css">
     <title>Apex | Registrar nuevo usuario</title>
-=======
-    <link rel="stylesheet" href="/css/politicas.css">
-    <title>Login</title>
->>>>>>> origin/dev_FREDDY_GIRALDO
     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
     <!-- SweetAlert2 -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
@@ -22,22 +17,9 @@
     </style>
 </head>
 <body>
-    <main>
+    <main class="registro">
         <form class="formulario">
-            <h1>REGISTRO</h1>
-<<<<<<< HEAD
-            <input type="text" placeholder="Nombre Completo">
-            <input type="email" placeholder="Correo Electronico">
-            <input type="password" placeholder="Contraseña">
-            <input type="password" placeholder="Confirmar Contraseña">
-            <select name="rol" id="listarol" placeholder="Seleccione un rol">
-                <option selected disabled>Seleccione un rol</option>
-                <option value="Administrador">Administrador</option>
-                <option value="Programador">Programador</option>
-            </select>
-            <!-- Cuadro de consentimiento de tratamiento de datos -->
-            <div class="group_list">
-=======
+            <h1>CREAR USUARIO</h1>
             <input type="text" placeholder="Nombre Completo" class="nombre" required>
             <input type="text" placeholder="Nombre de usuario" class="usuario" required>
             <input type="email" placeholder="Correo Electronico" class="correo" required>
@@ -51,28 +33,15 @@
                 <option value="4">Usuario</option>
             </select>            
             <div class="consentimiento">
->>>>>>> origin/dev_FREDDY_GIRALDO
                 <input type="checkbox" id="consentimiento_datos" required>
-                <p>Acepto los
-                    <a href="/privacidad">términos y pólitica de privacidad</a>.</p>
+                <p>Acepto
+                    <a href="/privacidad">pólitica de privacidad</a>.</p>
             </div>
-<<<<<<< HEAD
-            <!-- Añadir el widget de reCAPTCHA -->
-=======
             
->>>>>>> origin/dev_FREDDY_GIRALDO
             <div class="g-recaptcha" data-sitekey="6LehqjMqAAAAAFyuvGgqBC_Jt46wMvAcNWwuTn_L"></div>
             <input class="boton" type="submit" value="Continuar">
-<<<<<<< HEAD
-        </form>
-    </main>
-</body>
-<script src="/js/usuarios.js"></script>
-</html>
-=======
         </div>
     </div>
     <script src="/js/usuarios.js"></script>
 </body>
 </html>
->>>>>>> origin/dev_FREDDY_GIRALDO
