refactor: Organizo estilos css, paginas, redirección, rutas, menu,  controladores, fix: Corrijo envio de datos de registro, feat: Carpeta admin

--- a/src/public/css/login.css
+++ b/src/public/css/login.css
@@ -20,7 +20,7 @@ h1{
     text-align: center;
 }
 
-input[type= "text"], input[type= "email"], input[type= "password"]{
+input[type= "text"], input[type= "email"], input[type= "password"], input[type= "number"]{
     width: 80%;
     border-radius: 10px;
     border: none;
