--- a/src/views/admin/views.registro.ejs
+++ b/src/views/admin/views.registro.ejs
@@ -20,18 +20,18 @@
     <main class="registro">
         <form class="formulario">
             <h1>CREAR USUARIO</h1>
-            <input type="text" placeholder="Nombre Completo" class="nombre" required>
             <input type="text" placeholder="Nombre de usuario" class="usuario" required>
+            <input type="text" placeholder="Nombre Completo" class="nombre" required>
             <input type="email" placeholder="Correo Electronico" class="correo" required>
             <input type="password" placeholder="Contraseña" class="contrasena" required>
-            <input type="password" placeholder="Confirmar Contraseña" class="confirmar" required>
             <select name="rol" id="listarol" placeholder="Seleccione un rol" required>
                 <option selected disabled>Seleccione un rol: </option>
                 <option value="1">Administrador</option>
                 <option value="2">Invitado</option>
                 <option value="3">Moderador</option>
                 <option value="4">Usuario</option>
-            </select>            
+            </select> 
+            <input type="number" placeholder="123-456-7890" class="number" required>          
             <div class="consentimiento">
                 <input type="checkbox" id="consentimiento_datos" required>
                 <p>Acepto
