--- a/src/views/components/menu.ejs
+++ b/src/views/components/menu.ejs
@@ -8,22 +8,6 @@
         </a>
         <!-- Contenido principal -->
         <div class="d-flex flex-column align-items-center justify-content-center mt-2" style="flex-grow: 1;">
-            <!-- Logs Dropdown -->
-            <button class="btn-action d-flex align-items-center justify-content-between mt-2" id="admin-button">
-                <span class="text-start">Logs</span>
-                <i class="fa-solid fa-chevron-down"></i>
-            </button>
-            <div id="admin-dropdown" style="display: none; flex-direction: column; height: auto; width: 100%;">
-                <div class="dropdown">
-                    <a href="#" class="btn text-start text-light text-decoration-none">Logs de seguridad</a>
-                    <a href="#" class="btn text-start text-light text-decoration-none">Configuración de
-                        logs</a>
-                </div>
-            </div>
-
-            <!-- Grupos Dropdown -->
-            <a href="/#" class="btn-action d-flex align-items-center justify-content-between mt-2">Grupos</a>
-
             <!-- Accesos Dropdown -->
             <button class="btn-action d-flex align-items-center justify-content-between mt-2" id="access-button">
                 <span class="text-start">Accesos</span>
@@ -31,9 +15,28 @@
             </button>
             <div id="access-dropdown" style="display: none; flex-direction: column; height: auto; width: 100%;">
                 <div class="dropdown">
+                    <a href="#" class="btn text-start text-light text-decoration-none">Configuración de acceso</a>
                     <a href="#" class="btn text-start text-light text-decoration-none">Intentos de acceso</a>
-                    <a href="#" class="btn text-start text-light text-decoration-none">Configuración de
-                        acceso</a>
+                </div>
+            </div>
+
+            <!-- Grupos Dropdown -->
+            <a href="/#" class="btn-action d-flex align-items-center justify-content-between mt-2">Grupos</a>
+
+            <!-- Informes Dropdown -->
+            <a href="/informeActividad"
+                class=" btn btn-action d-flex align-items-center justify-content-between mt-2 text-start text-light text-decoration-none">Informes</a>
+
+            <!-- Logs Dropdown -->
+            <button class="btn-action d-flex align-items-center justify-content-between mt-2" id="admin-button">
+                <span class="text-start">Logs</span>
+                <i class="fa-solid fa-chevron-down"></i>
+            </button>
+            <div id="admin-dropdown" style="display: none; flex-direction: column; height: auto; width: 100%;">
+                <div class="dropdown">
+                    <a href="#" class="btn text-start text-light text-decoration-none">Configuración de Logs </a>
+                    <a href="#" class="btn text-start text-light text-decoration-none">Logs de seguridad</a>
+
                 </div>
             </div>
 
@@ -48,7 +51,7 @@
             </button>
             <div id="users-dropdown" style="display: none; flex-direction: column; height: auto; width: 100%;">
                 <div class="dropdown">
-                    <a href="#" class="btn text-start text-light text-decoration-none">Listado de usuarios</a>
+                    <a href="/registros-dispositivos" class="btn text-start text-light text-decoration-none">Registros de inicio de sesión</a>
                     <a href="#" class="btn text-start text-light text-decoration-none">Registros de
                         usuarios</a>
                     <a href="/bloqueos" class="btn text-start text-light text-decoration-none">Cuentas
@@ -59,10 +62,6 @@
                         inactivos</a>
                 </div>
             </div>
-
-            <!-- Informes Dropdown -->
-            <a href="/informeActividad"
-                class=" btn btn-action d-flex align-items-center justify-content-between mt-2 text-start text-light text-decoration-none">Informes</a>
 
             <!-- Seguridad Dropdown -->
             <button class="btn btn-action d-flex align-items-center justify-content-between mt-2" id="records-button">
