--- a/src/views/views.cuentas.bloqueadas.ejs
+++ b/src/views/views.cuentas.bloqueadas.ejs
@@ -1,160 +1,266 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="/css/permisos.css">
-    <link rel="stylesheet" href="/css/panel.css">
-    <link rel="stylesheet" href="/css/bloqueos.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    />
+    <link rel="stylesheet" href="/css/permisos.css" />
+    <link rel="stylesheet" href="/css/bloqueos.css" />
+    <link rel="stylesheet" href="/css/panel.css" />
     <title>Administrador - Cuentas bloqueadas</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <div class="container-fluid">
-        <div class="row">
-            <%- include('./components/menu'); %>
+      <div class="row">
+        <%- include('./components/menu'); %>
 
-                <div class="content col-md-10">
-                    <div class="row mb-4 header-row">
-                        <div class="col-12 d-flex">
-                            <div class="row w-100">
-                                <div class="col-8">
-                                    <h1>Administrador</h1>
-                                    <h1>Cuentas Bloqueadas</h1>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <br><br>
-                    <div class="col-12">
-                        <table class="table">
-                            <thead>
-                                <tr>
-                                    <th style="background-color: #1E3DEA; color: white;" scope="col">Nombre</th>
-                                    <th style="background-color: #1E3DEA; color: white;" scope="col">Contraseña</th>
-                                    <th style="background-color: #1E3DEA; color: white;" scope="col">Rol</th>
-                                    <th style="background-color: #1E3DEA; color: white;" scope="col">Estado</th>
-                                    <th style="background-color: #1E3DEA; color: white;" scope="col">Accion</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <% users.body.forEach(user => { %>
-                                    <!-- un usuario  -->
-                                        <!-- table active  -->
-                                    <tr class="table-active">
-                                        <input value="<%= user.id %>" type="hidden" id="id_usuariodes">
-                                        <input value="<%= url %>" type="hidden" id="url">
-                                        <td><%= user.nombre_usuario %></td>
-                                        <!-- <td><%= user.Apellido %></td> -->
-                                        <td>*****</td>
-                                        <td><%= user.nombre %></td>
-                                        <td><%= user.tipo_estado %></td>
-                                        <td>
-                                            <!-- div boton -->
-                                            <div class="btn-group" role="group">
-                                                <button style="background-color: #1E3DEA;" type="button"
-                                                    class="btn btn-edit btn-sm" data-bs-toggle="modal"
-                                                    data-bs-target="#permissionsModal">
-                                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
-                                                        viewBox="0 0 24 24" style="fill: white;transform: msFilter">
-                                                        <path
-                                                            d="m7 17.013 4.413-.015 9.632-9.54c.378-.378.586-.88.586-1.414s-.208-1.036-.586-1.414l-1.586-1.586c-.756-.756-2.075-.752-2.825-.003L7 12.583v4.43zM18.045 4.458l1.589 1.583-1.597 1.582-1.586-1.585 1.594-1.58zM9 13.417l6.03-5.973 1.586 1.586-6.029 5.971L9 15.006v-1.589z">
-                                                        </path>
-                                                        <path
-                                                            d="M5 21h14c1.103 0 2-.897 2-2v-8.668l-2 2V19H8.158c-.026 0-.053.01-.079.01-.033 0-.066-.009-.1-.01H5V5h6.847l2-2H5c-1.103 0-2 .897-2 2v14c0 1.103.897 2 2 2z">
-                                                        </path>
-                                                    </svg>
-                                                </button>
-                                            </div>
-                                        </td>
-                                    </tr>
-                                <% }); %>
-                                
-                            </tbody>
-                        </table>
-                    </div>
-                    <div class="col-4 d-flex">
-                        <button class="btn btn-primary btn-custom" data-bs-toggle="modal"
-                            data-bs-target="#blockingPoliciesModal">Políticas de bloqueo
-                        </button>
-                    </div>
+        <div class="content col-md-10">
+          <div class="row mb-4 header-row">
+            <div class="col-12 d-flex">
+              <div class="row w-100">
+                <div class="col-8">
+                  <h1>Administrador</h1>
+                  <h1>Cuentas Bloqueadas</h1>
                 </div>
+              </div>
+            </div>
+          </div>
+          <br /><br />
+          <div class="col-12">
+            <table class="table">
+              <thead>
+                <tr>
+                  <th
+                    style="background-color: #1e3dea; color: white"
+                    scope="col"
+                  >
+                    Nombre
+                  </th>
+                  <th
+                    style="background-color: #1e3dea; color: white"
+                    scope="col"
+                  >
+                    Contraseña
+                  </th>
+                  <th
+                    style="background-color: #1e3dea; color: white"
+                    scope="col"
+                  >
+                    Rol
+                  </th>
+                  <th
+                    style="background-color: #1e3dea; color: white"
+                    scope="col"
+                  >
+                    Estado
+                  </th>
+                  <th
+                    style="background-color: #1e3dea; color: white"
+                    scope="col"
+                  >
+                    Accion
+                  </th>
+                </tr>
+              </thead>
+              <tbody>
+                <% users.body.forEach(user => { %>
+                <!-- un usuario  -->
+                <!-- table active  -->
+                <tr class="table-active">
+                  <input
+                    value="<%= user.id %>"
+                    type="hidden"
+                    id="id_usuariodes"
+                  />
+                  <input value="<%= url %>" type="hidden" id="url" />
+                  <td><%= user.nombre_usuario %></td>
+                  <!-- <td><%= user.Apellido %></td> -->
+                  <td>*</td>
+                  <td><%= user.nombre %></td>
+                  <td><%= user.tipo_estado %></td>
+                  <td>
+                    <!-- div boton -->
+                    <div class="btn-group" role="group">
+                      <button
+                        style="background-color: #1e3dea"
+                        type="button"
+                        class="btn btn-edit btn-sm"
+                        data-bs-toggle="modal"
+                        data-bs-target="#permissionsModal"
+                      >
+                        <svg
+                          xmlns="http://www.w3.org/2000/svg"
+                          width="24"
+                          height="24"
+                          viewBox="0 0 24 24"
+                          style="fill: white; transform: msFilter"
+                        >
+                          <path
+                            d="m7 17.013 4.413-.015 9.632-9.54c.378-.378.586-.88.586-1.414s-.208-1.036-.586-1.414l-1.586-1.586c-.756-.756-2.075-.752-2.825-.003L7 12.583v4.43zM18.045 4.458l1.589 1.583-1.597 1.582-1.586-1.585 1.594-1.58zM9 13.417l6.03-5.973 1.586 1.586-6.029 5.971L9 15.006v-1.589z"
+                          ></path>
+                          <path
+                            d="M5 21h14c1.103 0 2-.897 2-2v-8.668l-2 2V19H8.158c-.026 0-.053.01-.079.01-.033 0-.066-.009-.1-.01H5V5h6.847l2-2H5c-1.103 0-2 .897-2 2v14c0 1.103.897 2 2 2z"
+                          ></path>
+                        </svg>
+                      </button>
+                    </div>
+                  </td>
+                </tr>
+                <% }); %>
+              </tbody>
+            </table>
+          </div>
+          <div class="col-4 d-flex">
+            <button
+              class="btn btn-primary btn-custom"
+              data-bs-toggle="modal"
+              data-bs-target="#blockingPoliciesModal"
+            >
+              Políticas de bloqueo
+            </button>
+          </div>
         </div>
+      </div>
     </div>
 
     <!-- Modal -->
-<div class="modal fade" id="permissionsModal" tabindex="-1" aria-labelledby="permissionsModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
+    <div
+      class="modal fade"
+      id="permissionsModal"
+      tabindex="-1"
+      aria-labelledby="permissionsModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog">
         <div class="modal-content">
-            <div class="modal-header modal-header-custom">
-                <h5 class="modal-title" id="permissionsModalLabel">¿DESEA DESBLOQUEAR ESTE USUARIO?</h5>
+          <div class="modal-header modal-header-custom">
+            <h5 class="modal-title" id="permissionsModalLabel">
+              ¿DESEA DESBLOQUEAR ESTE USUARIO?
+            </h5>
+          </div>
+          <div class="modal-body">
+            <div class="unlock-icon-container">
+              <svg
+                width="80"
+                height="80"
+                viewBox="0 0 222 222"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+                id="unlock-icon"
+              >
+                <path
+                  d="M110.938 147.393C116.042 147.393 120.18 143.255 120.18 138.15C120.18 133.046 116.042 128.908 110.938 128.908C105.834 128.908 101.696 133.046 101.696 138.15C101.696 143.255 105.834 147.393 110.938 147.393Z"
+                  fill="white"
+                />
+                <!-- <path d="..." fill="white" /> -->
+              </svg>
             </div>
-            <div class="modal-body">
-                <div class="unlock-icon-container">
-                    <svg width="80" height="80" viewBox="0 0 222 222" fill="none" xmlns="http://www.w3.org/2000/svg" id="unlock-icon">
-                        <path d="M110.938 147.393C116.042 147.393 120.18 143.255 120.18 138.15C120.18 133.046 116.042 128.908 110.938 128.908C105.834 128.908 101.696 133.046 101.696 138.15C101.696 143.255 105.834 147.393 110.938 147.393Z" fill="white" />
-                        <!-- <path d="..." fill="white" /> -->
-                    </svg>
-                </div>
-                <p class="modal-message">El usuario será desbloqueado del sistema</p>
-            </div>
-            <div class="modal-footer">
-                <button id="btn_desbloquear" type="button" class="btn btn-primary">Continuar</button>
-            </div>
+            <p class="modal-message">
+              El usuario será desbloqueado del sistema
+            </p>
+          </div>
+          <div class="modal-footer">
+            <button id="btn_desbloquear" type="button" class="btn btn-primary">
+              Continuar
+            </button>
+          </div>
         </div>
+      </div>
     </div>
-</div>
 
     <!-- Modal for Blocking Policies -->
-    <div class="modal fade" id="blockingPoliciesModal" tabindex="-1" aria-labelledby="blockingPoliciesModalLabel"
-        aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header modal-header-custom">
-                    <h5 class="modal-title" id="blockingPoliciesModalLabel">Configurar Políticas de Bloqueo</h5>
-                </div>
-                <div class="modal-body">
-                    <form id="blockingPoliciesForm">
-                        <div class="mb-3">
-                            <label for="maxAttempts" class="form-label">Número Máximo de Intentos</label>
-                            <input type="number" class="form-control" id="maxAttempts"
-                                placeholder="Número máximo de intentos fallidos antes del bloqueo">
-                        </div>
-                        <div class="mb-3">
-                            <label for="blockDuration" class="form-label">Duración del Bloqueo (minutos)</label>
-                            <input type="number" class="form-control" id="blockDuration"
-                                placeholder="Duración del bloqueo en minutos">
-                        </div>
-                        <div class="mb-3">
-                            <label for="notifyAdmins" class="form-label">Notificar a Administradores</label>
-                            <input type="checkbox" id="notifyAdmins"> Notificar a los administradores cuando una cuenta
-                            se bloquee.
-                        </div>
-                    </form>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-                    <button type="button" class="btn btn-primary" onclick="saveBlockingPolicies()">Guardar
-                        Cambios</button>
-                </div>
-            </div>
+    <div
+      class="modal fade"
+      id="blockingPoliciesModal"
+      tabindex="-1"
+      aria-labelledby="blockingPoliciesModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header modal-header-custom">
+            <h5 class="modal-title" id="blockingPoliciesModalLabel">
+              Configurar Políticas de Bloqueo
+            </h5>
+          </div>
+          <div class="modal-body">
+            <form id="blockingPoliciesForm">
+              <div class="mb-3">
+                <label for="maxAttempts" class="form-label"
+                  >Número Máximo de Intentos</label
+                >
+                <input
+                  type="number"
+                  class="form-control"
+                  id="maxAttempts"
+                  placeholder="Número máximo de intentos fallidos antes del bloqueo"
+                />
+              </div>
+              <div class="mb-3">
+                <label for="blockDuration" class="form-label"
+                  >Duración del Bloqueo (minutos)</label
+                >
+                <input
+                  type="number"
+                  class="form-control"
+                  id="blockDuration"
+                  placeholder="Duración del bloqueo en minutos"
+                />
+              </div>
+              <div class="mb-3">
+                <label for="notifyAdmins" class="form-label"
+                  >Notificar a Administradores</label
+                >
+                <input type="checkbox" id="notifyAdmins" /> Notificar a los
+                administradores cuando una cuenta se bloquee.
+              </div>
+            </form>
+          </div>
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-bs-dismiss="modal"
+            >
+              Cerrar
+            </button>
+            <button
+              type="button"
+              class="btn btn-primary"
+              onclick="saveBlockingPolicies()"
+            >
+              Guardar Cambios
+            </button>
+          </div>
         </div>
+      </div>
     </div>
-</body>
-<script>
-    document.querySelectorAll('.btn-primary').forEach(button => {
-        button.addEventListener('click', () => {
-            const dropdownId = button.id.replace('button', 'dropdown');
-            const dropdown = document.getElementById(dropdownId);
-            dropdown.style.display = dropdown.style.display === 'none' ? 'flex' : 'none';
-        });
+  </body>
+  <script>
+    document.querySelectorAll(".btn-primary").forEach((button) => {
+      button.addEventListener("click", () => {
+        const dropdownId = button.id.replace("button", "dropdown");
+        const dropdown = document.getElementById(dropdownId);
+        dropdown.style.display =
+          dropdown.style.display === "none" ? "flex" : "none";
+      });
     });
-</script>
-<script src="/js/botones.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/5.3.3/js/bootstrap.bundle.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-</html> 
+  </script>
+  <script src="/js/botones.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.3.3/js/bootstrap.bundle.min.js"></script>
+  <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"
+  ></script>
+</html>
