--- a/src/views/views.panel.ejs
+++ b/src/views/views.panel.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Apex</title>
+    <title>Dashboard | </title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="/css/panel.css">
@@ -21,7 +21,7 @@
                                 <h1>Panel de Control usuarios</h1>
                             </div>
                             <div class="col-4 d-flex">
-                                <button class="btn btn-primary btn-custom agregar">Agregar Usuario</button>
+                                <a class="btn d-flex justify-content-center align-items-center btn-primary btn-custom" href="/admin/registro">Agregar Usuario</a>
                             </div>
                         </div>
                     </div>
@@ -33,9 +33,8 @@
                             <tr>
                                 <th style="background-color: #1E3DEA; color: white;" scope="col">ID</th>
                                 <th style="background-color: #1E3DEA; color: white;" scope="col">Nombre</th>
-                                <th style="background-color: #1E3DEA; color: white;" scope="col">Apellido</th>
+                                <th style="background-color: #1E3DEA; color: white;" scope="col">Correo</th>
                                 <th style="background-color: #1E3DEA; color: white;" scope="col">Celular</th>
-                                <th style="background-color: #1E3DEA; color: white;" scope="col">Contraseña</th>
                                 <th style="background-color: #1E3DEA; color: white;" scope="col">Rol</th>
                                 <th style="background-color: #1E3DEA; color: white;" scope="col">Estado</th>
                                 <th style="background-color: #1E3DEA; color: white;" scope="col">Acciones</th>
@@ -45,10 +44,9 @@
                             <% users.body.forEach(user => { %>
                                 <tr class="table-active">
                                     <td class="id_usuario"><%= user.ID %></td>
-                                    <td><%= user.Nombre.split(' ')[0] %></td> 
-                                    <td><%= user.Nombre.split(' ')[1] || '' %></td> 
-                                    <td><%= user.Correo %></td> 
-                                    <td></td> 
+                                    <td class="id_usuario"><%= user.Nombre %></td>
+                                    <td><%= user.Correo %></td>
+                                    <td></td>
                                     <td>    
                                         <select class="form-select">
                                             <option value="2" <%= user.Rol === 'Usuario' ? 'selected' : '' %>>Usuario</option>
