Se conecta y crea boton dashboard funcionando

--- a/src/views/components/menu.ejs
+++ b/src/views/components/menu.ejs
@@ -66,6 +66,10 @@
                 <!-- <a href="/panel" class="btn btn-secondary text-start text-light text-decoration-none">Panel de
                     control</a> -->
             </div>
+
+            <!-- dashboard Dropdown -->
+            <a href="/panel-seguridad" class= "btn btn-primary d-flex align-items-center justify-content-between mt-2 text-start text-light text-decoration-none">Dashboard</a>
+
             <!-- Seguridad Dropdown -->
             <button class="btn btn-primary d-flex align-items-center justify-content-between mt-2" id="records-button">
                 <span class="text-start">Seguridad</span>
