--- a/src/views/panel-control-seguridad.ejs
+++ b/src/views/panel-control-seguridad.ejs
@@ -70,6 +70,6 @@
         window.administradoresPorEstado = <%- JSON.stringify(administradoresPorEstado) %>;
         window.politicasBloqueo = <%- JSON.stringify(politicasBloqueo) %>;
     </script>
-    <script src="/js/dashboard2.js"></script>
+    <script src="/js/dashboard.js"></script>
 </body>
 </html>
