--- a/src/public/css/panel.css
+++ b/src/public/css/panel.css
@@ -1,4 +1,9 @@
-/* .dropdown-arrow {
+/* Archivo para montar carpeta en Git hub */
+* {
+  margin: 0;
+  padding: 0;
+}
+.dropdown-arrow {
     width: auto;
     height: 20px;
     position: relative;
@@ -22,13 +27,12 @@
 #admin-button, 
 #config-button {
     border-bottom: 2px solid rgba(0, 0, 0, 0.2); 
-} */
-
-.aside {
-  background-color: #1e3dea;
 }
 
-/* .btn {
+.aside {
+  background-color: #1E3DEA;
+}
+.btn {
   width: 100%;
   height: 52px;
   background-color: #4961E4;
@@ -37,40 +41,39 @@
 .admin-section {
   margin-top: auto;
   padding-bottom: 20px;
-} */
-th {
-  background-color: #1e3dea;
+}
+th{
+  background-color: #1E3DEA;
 }
 .header-row {
   align-items: center;
-  height: 60px;
+  height: 60px; 
 }
 .header-row h1 {
   margin: 0;
-  line-height: 60px;
+  line-height: 60px; 
 }
 .header-row .btn {
-  line-height: 40px;
+  line-height: 40px; 
 }
 .content {
-  padding-top: 20px;
+  padding-top: 20px; 
 }
-
 #settings-dropdown .btn,
 #users-dropdown .btn,
 #records-dropdown .btn,
 #access-dropdown .btn,
 #admin-dropdown .btn,
 #config-dropdown .btn {
-  line-height: 1;
-  padding: 10px; 
-  text-align: left;
+  line-height: 1; /* Ajusta la altura de línea para evitar cortes */
+  padding: 10px; /* Ajusta el padding si es necesario */
+  text-align: left; /* Asegura que el texto esté alineado a la izquierda */
 }
 
 .gbtn {
   width: 20%;
   height: 45px;
-  background-color: #4961e4;
+  background-color: #4961E4;
   font-size: 15px;
 }
 
@@ -78,22 +81,4 @@ th {
 .btn-key:hover .btn-icon, 
 .btn-delete:hover .btn-icon {
     color: red; /* Cambia a otro color en lugar de negro */
-}
-
-.row {
-    width: 100%;
-    height: 100vh;
-}
-.aside {
-    background-color: #1E3DEA;
-}
-.btn {
-    width: 100%;
-    height: 52px;
-    background-color: #4961E4;
-    font-size: 18px;
-}
-.admin-section {
-    margin-top: auto;
-    padding-bottom: 20px;
 }
