--- a/src/views/views.complejidad.preguntas.ejs
+++ b/src/views/views.complejidad.preguntas.ejs
@@ -154,7 +154,7 @@
                         <input type="number" name="" id="cantP">
 
                         <div class="caja_btn">
-                            <button class="boton btn--red">Cancelar</button>
+                            <button class="boton btn--red" id="btnC">Cancelar</button>
                             <button class="boton btn--blue" id="btnG">Guardar</button>
                         </div>
                     </div>
@@ -168,6 +168,7 @@
 
     </div>
 
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="js/complejidad.preguntas.js"></script>
     <script src="/js/botones.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.3.3/js/bootstrap.bundle.min.js"></script>
