--- a/src/public/css/styleco.css
+++ b/src/public/css/styleco.css
@@ -3,6 +3,7 @@
     margin: 0;
     padding: 0;
 }
+
 .dropdown-arrow {
     width: auto;
     height: 20px;
@@ -14,78 +15,152 @@
     width: 100%;
     height: 100vh;
 }
-#settings-button, 
-#users-button, 
-#records-button, 
-#groups-button, 
-#reports-button, 
-#access-button, 
-#export-button, 
-#admin-button, 
+
+#settings-button,
+#users-button,
+#records-button,
+#groups-button,
+#reports-button,
+#access-button,
+#export-button,
+#admin-button,
 #config-button {
-    border-bottom: 2px solid rgba(0, 0, 0, 0.2); 
+    border-bottom: 2px solid rgba(0, 0, 0, 0.2);
 }
 
 .aside {
     background-color: #1E3DEA;
 }
-.btn {
-    width: 100%;
-    height: auto;
-    background-color: #4961E4;
-    font-size: 18px;
-    border: none;
-}
+
 .admin-section {
     margin-top: auto;
     padding-bottom: 20px;
 }
-th{
+
+th {
     background-color: #1E3DEA;
 }
+
 .header-row {
     align-items: center;
-    height: 60px; 
+    height: 60px;
 }
+
 .header-row h1 {
     margin: 0;
-    line-height: 60px; 
+    line-height: 60px;
 }
+
 .header-row .btn {
-    line-height: 40px; 
+    line-height: 40px;
 }
+
 .content {
-    padding-top: 20px; 
+    padding-top: 20px;
 }
-.t1{
+
+.t1 {
     width: 10%;
     height: 40px;
     background-color: rgb(214, 214, 214);
 }
 
-.t2{
+.t2 {
     width: 60px;
     height: 40px;
     background-color: rgb(214, 214, 214);
 }
 
-.t3{
+.t3 {
     width: 100px;
     height: 40px;
     background-color: rgb(214, 214, 214);
 }
 
-.button-container {
-    position: relative;
-    margin-top: 20px;
-}
-.gbtn {
-    width: 20%;
-    height: 45px;
-    background-color: #4961E4;
-    font-size: 15px;
-}
+
 .d-flex-end {
     display: flex;
     justify-content: flex-end;
+}
+
+.contenedor {
+    display: flex;
+    justify-content: center;
+    padding-top: 20px;
+
+}
+
+/* Diseño de LA CAJA DE INFORMACION */
+.caja_informacion {
+    width: 80%;
+    height: 600px;
+    padding: 20px;
+    border: 1px solid black;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    text-align: center;
+    padding-top: 30px;
+}
+
+/* Caja 1 IZQUIERDA */
+.informacion_caja1 {
+    width: 100%;
+    height: 100%;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr 5fr;
+}
+
+h1 {
+    font-size: 30px;
+}
+
+/* Diseño de los select */
+.selectores{
+    width: 200px;
+    height: 40px;
+}
+
+/* Diseño de los inputs */
+.cajass{
+    width: 80px;
+    text-align: center;
+    background-color: rgb(224, 224, 224);
+}
+.cambio{
+    height: 40px;
+    margin-left: 40px;
+}
+
+.camb{
+    margin-left: 40px;
+}
+
+.caja_input {
+    display: flex;
+    flex-direction: row;
+}
+
+/* Caja 2 DERECHA */
+.caja_grilla {
+    width: 100%;
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    grid-template-rows: repeat(1fr, 6);
+    margin: 30px 0px;
+}
+
+.gboton {
+    width: 150px;
+    height: 40px;
+    background-color: blue;
+    color: white;
+    border-radius: 5px;
+    border: none;
+    padding: 0px 1px;
+}
+
+.gboton:hover {
+    background-color: gainsboro;
+    color: black;
 }
