--- a/src/views/views.informe.actividad.ejs
+++ b/src/views/views.informe.actividad.ejs
@@ -194,6 +194,10 @@
                     </table> <!-- CIERRE DE LA TABLA -->
                 </div> <!-- CIERRE CONTENEDOR TABLA -->
 
+                <div class="contenedor_boton">
+                    <button class="btn-verde">Descarga el informe de Auditoria</button>
+                </div>
+
 
             </div>
         </div>
@@ -207,7 +211,7 @@
             });
 
         </script>
-
+        <script src="/js/informeActividad.js"></script>
         <script src="/js/botones.js"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.3.3/js/bootstrap.bundle.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
