--- a/src/views/views.verificacionDoble2.ejs
+++ b/src/views/views.verificacionDoble2.ejs
@@ -22,7 +22,7 @@
                             <div class="cuadroConTexto__contenedor2">
                                 <h2 class="contenedor2__h2">Configura tu teléfono</h2><br>
                                 <p class="contenedor2__p1">¿Qué número de teléfono usas?</p>
-                                <input type="text" placeholder="Introduce tu número" class="contenedor2__input" id="phoneNumberInput">
+                                <input type="text" placeholder="Introduce tu número. Ejem: +573226347434" class="contenedor2__input" id="phoneNumberInput">
                                 <br><br>
                                 <p>
                                     Apex solo usará este número <br>para mantener la seguridad de la cuenta.
