--- a/src/views/views.panel.ejs
+++ b/src/views/views.panel.ejs
@@ -58,25 +58,25 @@
                                     <td class="estado"><%= user.Estado %></td>
                                     <td>
                                         <div class="btn-group" role="group">
-                                            <button style="background-color: black;" type="button" class="btn btn-key btn-sm btn-custom btn-group-custom" data-bs-toggle="modal" data-bs-target="#permissionsModal">
+                                            <button type="button" class="btn-manage" data-bs-toggle="modal" data-bs-target="#permissionsModal">
                                                 <i class="fa-solid fa-key"></i>
+                                                <p for="">Gestionar permisos</p>
                                             </button>
-                                            <button style="background-color: blue;" type="button" class="btn btn-edit btn-sm">
+                                            <button type="button" class="btn-edit">
                                                 <i class="fa-solid fa-pen"></i>
+                                                <p for="">Editar Usuario</p>
                                             </button>
-                                            <button style="background-color: red;" type="button" class="btn btn-delete btn-sm">
-                                            <button style="background-color: rgba(44, 42, 42, 0.395)" type="button" class="btn btn-edit btn-sm btn-action">
+                                            <button type="button" class="btn-lock">
                                                 <i class="fa-solid fa-lock"></i>
-                                                <label for="">Bloquear Usuario</label>
+                                                <p for="">Bloquear Usuario</p>
                                             </button>
-
-                                            <button style="background-color: black;" type="button" class="btn btn-delete btn-sm btn-action">
+                                            <button type="button" class="btn-remove">
                                                  <i class="fa-solid fa-remove"></i>
-
-                                                <label for="">Revocar sesión</label>
+                                                <p for="">Revocar sesión</p>
                                             </button>
-                                            <button style="background-color: red;" type="button" class="btn btn-delete btn-sm btn-action">
+                                            <button ype="button" class="btn-delete">
                                                 <i class="fa-solid fa-trash"></i>
+                                                <p for="">Eliminar Usuario</p>
                                             </button>
                                         </div>
                                     </td>
