--- a/src/views/admin/views.registro.ejs
+++ b/src/views/admin/views.registro.ejs
@@ -9,12 +9,6 @@
     <!-- SweetAlert2 -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <style>
-        /* Asegura que SweetAlert2 se muestra sobre otros elementos */
-        .swal2-container {
-            z-index: 9999 !important; /* Ajusta el valor si es necesario */
-        }
-    </style>
 </head>
 <body>
     <main class="registro">
@@ -38,7 +32,7 @@
                     <a href="/privacidad">pólitica de privacidad</a>.</p>
             </div>
             
-            <!-- <div class="g-recaptcha" data-sitekey="6LehqjMqAAAAAFyuvGgqBC_Jt46wMvAcNWwuTn_L"></div> -->
+            <div class="g-recaptcha" data-sitekey="6LehqjMqAAAAAFyuvGgqBC_Jt46wMvAcNWwuTn_L"></div>
             <input class="boton" type="submit" value="Continuar">
         </div>
     </div>
