--- a/src/views/admin/views.cuentas.bloqueadas.ejs
+++ b/src/views/admin/views.cuentas.bloqueadas.ejs
@@ -7,16 +7,14 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-  <link rel="stylesheet" href="/css/permisos.css">
   <link rel="stylesheet" href="/css/bloqueos.css">
-  <link rel="stylesheet" href="/css/panel.css">
   <title>Administrador - Cuentas bloqueadas</title>
 </head>
 
 <body>
   <div class="container-fluid">
     <div class="row">
-      <%- include('./components/menu'); %>
+      <%- include('../components/menu'); %>
 
         <div class="content col-md-10">
           <div class="row mb-4 header-row">
@@ -125,9 +123,9 @@
           </p>
         </div>
         <div class="modal-footer">
-          <button id="btn_desbloquear" type="button" class="btn btn-primary">
+          <button id="btn_desbloquear" type="button" class="btn btn-primary" onclick="desbloquearUsuario()">
             Continuar
-          </button>
+          </button>          
         </div>
       </div>
     </div>
@@ -174,17 +172,7 @@
     </div>
   </div>
 </body>
-<script>
-  document.querySelectorAll(".btn-primary").forEach((button) => {
-    button.addEventListener("click", () => {
-      const dropdownId = button.id.replace("button", "dropdown");
-      const dropdown = document.getElementById(dropdownId);
-      dropdown.style.display =
-        dropdown.style.display === "none" ? "flex" : "none";
-    });
-  });
-</script>
-<script src="/js/botones.js"></script>
+<script src="/js/services/botones.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.3.3/js/bootstrap.bundle.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
   integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
