fix: Solucion de errores, corregido bloqueos, desbloqueos, menu, alerta de desbloqueo - fix: Correcion de rutas y controladores, consumo de api y envio de informacion - refactor: Corregion codigo y optimizacion de errores - style: Corregion de estilos css para paginas - style: Añadido favicon a pagina login, proximamente las demás

--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -20,4 +20,6 @@ body::-webkit-scrollbar {
   --color-1: #151c41;
   --color-2: #fff;
   --color-btn-menu: #0521aa;
+  --color-3: #2b2c33;
+  --color-4: #1e3dea;
 }
