--- a/src/public/css/components/menu.css
+++ b/src/public/css/components/menu.css
@@ -28,3 +28,25 @@
   background-color: rgb(37, 37, 122);
   border-radius: 1vh;
 }
+
+.dropdown-menu {
+  position: absolute;
+  background-color: white;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  z-index: 1000;
+  bottom: 5vh;
+  left: 20vh;
+}
+
+.dropdown-item {
+  padding: 10px 20px;
+  display: block;
+  color: black;
+  text-decoration: none;
+}
+
+.dropdown-item:hover {
+  background-color: #f0f0f0;
+}
