--- a/src/public/css/perfil.css
+++ b/src/public/css/perfil.css
@@ -1,59 +1,54 @@
+@import url("main.css");
+@import url("components/menu.css");
 
-@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');*{
-    padding: 0;
-    margin: 0;
-    font-size: 16px;
-    font-family: "Inter", sans-serif;
 
-}
 
-/* @font-face {
-    font-family: ;
-    src: url(../font/Inter-VariableFont_slnt\,wght.ttf);
-} */
 nav{
-    background-color: #394DC0;
-    width: 100%;
-    height: 80px;
-}
-.nav__item{
     display: flex;
-    justify-content: flex-end;
-    align-items: center;
+    justify-content: end;
+    background-color: var(--color-3);
 }
-.nav__item > i{
-    font-size: 40px;
-    cursor: pointer;
-    margin: 20px 10px;
+
+ul{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 2vh;
+    padding: 3vh ;
+}
+ul > i{
+    font-size: 3vh;
     color: white;
 }
-/* ESTO ES DEL MAIN EL CONTENIDO */
-.main__perfil{
-    display: grid;
-    grid-template-columns: 2fr 1fr;
-    grid-template-rows: repeat(2, 4fr);
-    height: calc(100vh - 80px);
-    justify-content: center;
-    align-items: center;
+
+/* notifiacion */
+
+.box-notification{
+    background-color: var(--color-4 );
+    width: 20%;
+    position: absolute;
+    top: 10vh;
+    right: 10vh;
+    color: white;
+    transition: 0.5s;
+    display: block;
+    padding: 3vh;
+    border-radius: 1vh;
 }
-.img__foto{
+
+.noti__head{
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 20px;
+    border-bottom: .5vh solid #fff;
 }
-.main__img{
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr 1fr;
-    place-content: center;
-}
-.main__perfil> .main__img{
+
+.noti__body{
     display: flex;
-    flex-direction: column;
-    gap: 10px;
-    margin: 20px;
+    justify-content: center;
+    align-items: center;
 }
+
 
 .main__perfil> .main__img> .img__foto > .circulo{
     background-color: gray;
@@ -139,51 +134,7 @@ nav{
 }
 
 
-/* notifiacion */
-.caja__notifica{
-    background-color: #43496b;
-    width: 350px;
-    height: 400px;
-    position: absolute;
-    top: 65px;
-    right: 70px;
-    color: white;
-    transition: 0.5s;
-    border-radius: 10px;
-    display: none;
-}
-.noti__head{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-bottom: 1px solid black;
-    padding: 10px;
-}
-.noti__head > p{
-    color: black;
-}
-.noti__main{
-    width: 100%;
-    height: 100%;
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 13% 76% 13%;
-}
-.noti__body{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.noti__footer{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-top: 1px solid black;
-}
-.active{
-    display: block;
-    transition: 1s ease-in-out;
-}
+
 
 .config{
     background-color: gray;
@@ -316,196 +267,3 @@ nav{
     transition: transform 0.3s;
 }
 
-@media screen and (width <= 1010px) {
-    .btn--azul, .btn--gris{
-        margin-bottom: 15px;
-    }
-
-    nav{
-        background-color: #394DC0;
-        width: 100%;
-        height: 80px;
-    }
-    .nav__item{
-        display: flex;
-        justify-content: flex-end;
-        align-items: center;
-    }
-    .nav__item > i{
-        font-size: 40px;
-        cursor: pointer;
-        margin: 20px 10px;
-        color: white;
-    }
-    /* ESTO ES DEL MAIN EL CONTENIDO */
-    .main__perfil{
-        display: grid;
-        grid-template-columns: 2fr 1fr;
-        grid-template-rows: repeat(2, 4fr);
-        height: calc(100vh - 80px);
-        justify-content: center;
-        align-items: center;
-    }
-    .img__foto{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        gap: 20px;
-    }
-    .main__img{
-        display: grid;
-        grid-template-columns: 1fr;
-        grid-template-rows: 1fr 1fr;
-        place-content: center;
-    }
-    .main__perfil> .main__img{
-        display: flex;
-        flex-direction: column;
-        gap: 10px;
-        margin: 20px;
-    }
-    
-    .main__perfil> .main__img> .img__foto > .circulo{
-        background-color: gray;
-        height: 200px;
-        width: 200px;
-        border-radius: 100%;
-    }
-    .perfil__btn{
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    }
-    .nom{
-        margin: 20px;
-    }
-    /* botnores */
-    .btn{
-        width: 300px;
-        height: 40px;
-        cursor: pointer;
-        border-radius: 10px;
-        border: none;
-        color: white;
-        
-    }
-    
-    .arriba,
-    .abajo{
-        margin: 7px 20px;
-    }
-    .btn--azul{
-        background-color: #394DC0;
-    }
-    .btn--rojo{
-        background-color: #C90000;
-    }
-    .btn--gris{
-        background-color: #D9D9D9;
-        color: black;
-    }
-    .btn:hover,
-    .btn:focus{
-        box-shadow: 0 0 5px rgba(12, 12, 12, 0.932); 
-        transition: .3s;
-        outline: none; 
-    }
-    
-    /* notifiacion */
-    .caja__notifica{
-        background-color: #43496b;
-        width: 300px;
-        height: 330px;
-        position: absolute;
-        top: 65px;
-        right: 50px;
-        color: white;
-        transition: 0.5s;
-        border-radius: 10px;
-        display: none;
-    }
-    .noti__head{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        border-bottom: 1px solid black;
-    
-    }
-    .noti__head > p{
-        color: black;
-    }
-    .noti__main{
-        width: 100%;
-        height: 100%;
-        display: grid;
-        grid-template-columns: 1fr;
-        grid-template-rows: 13% 76% 13%;
-    }
-    .noti__body{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-    .noti__footer{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        border-top: 1px solid black;
-    }
-    .active{
-        display: block;
-    }
-    
-    .toggle-container {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        background-color: #3b5998; 
-        padding: 7px 40px;
-        border-radius: 5px;
-        width: fit-content;
-        margin-bottom: 10px;
-    }
-    
-    .toggle-label {
-        color: white;
-        font-size: 16px;
-        margin-right: 10px;
-    }
-    
-    .toggle-switch {
-        display: none;
-    }
-    
-    .switch {
-        width: 40px;
-        height: 20px;
-        background-color: white;
-        border-radius: 10px;
-        position: relative;
-        cursor: pointer;
-        transition: background-color 0.3s;
-    }
-    
-    .switch::before {
-        content: '';
-        position: absolute;
-        top: 2px;
-        left: 2px;
-        width: 16px;
-        height: 16px;
-        background-color: #3b5998;
-        border-radius: 50%;
-        transition: transform 0.3s;
-    }
-    
-    .toggle-switch:checked + .switch::before {
-        transform: translateX(20px);
-    }
-    
-    .toggle-switch:checked + .switch {
-        background-color: #181a18;
-    }
-    
-}
