--- a/src/views/admin/views.configurar.logs.ejs
+++ b/src/views/admin/views.configurar.logs.ejs
@@ -12,7 +12,7 @@
 <body>
     <div class="container-fluid">
         <div class="row">
-            <%- include('./components/menu'); %>
+            <%- include('../components/menu'); %>
             <div class="col-10">
                 <div class="row-1">
                     <div class="row mt-4">
