--- a/src/views/admin/views.registro.dispositivos.ejs
+++ b/src/views/admin/views.registro.dispositivos.ejs
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/panel.css">
+    <script src="https://kit.fontawesome.com/58e42bf76d.js" crossorigin="anonymous"></script>
     <title>Registro de Inicios de Sesión</title>
 </head>
 <body>
@@ -24,35 +25,32 @@
                 <table class="table table-striped table-bordered">
                     <thead class="bg-primary text-white">
                         <tr>
-                            <th style="background-color: #394DC0; color: white;">Dirección</th>
-                            <th style="background-color: #394DC0; color: white;">Dispositivo</th>
-                            <th style="background-color: #394DC0; color: white;">Navegador</th>
-                            <th style="background-color: #394DC0; color: white;">Ubicación</th>
                             <th style="background-color: #394DC0; color: white;">Fecha</th>
                             <th style="background-color: #394DC0; color: white;">Hora</th>
+          
+                            <th style="background-color: #394DC0; color: white;">Dirección IP</th>
+                            <th style="background-color: #394DC0; color: white;">Sistema operativo</th>
                         </tr>
                     </thead>
                     <tbody>
-                        <% datos.forEach(function(registro) { %>
+                        <% registros.forEach(function(registro) { %>
                             <tr class="bg-light">
-                                <td><%= registro.direccion_ip %></td>
-                                <td><%= registro.dispositivo %></td>
-                                <td>Opera</td>
-                                <td>Brasil</td>
                                 <td><%= new Date(registro.fecha_inicio_sesion).toLocaleDateString() %></td>
                                 <td><%= new Date(registro.fecha_inicio_sesion).toLocaleTimeString() %></td>
+                                <td><%= registro.direccion_ip %></td>
+                                <td><%= registro.dispositivo %></td>
                             </tr>
-                            <% }) %>
-                            <!-- Filas vacías para mantener el diseño similar -->
-                            <% for (let i = registros.body.length; i < 5; i++) { %>
-                            <tr class="bg-light"><td colspan="5"></td></tr>
+                        <% }) %>
+                        <!-- Filas vacías para mantener el diseño similar -->
+                        <% for (let i = registros.length; i < 5; i++) { %>
+                            <tr class="bg-light"><td colspan="6"></td></tr>
                         <% } %>
                     </tbody>
+                    
                 </table>
             </div>
         </div>
     </div>
 </body>
-<script src="/js/dropdown-panel.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </html>
