--- a/src/views/admin/views.registro.ejs
+++ b/src/views/admin/views.registro.ejs
@@ -36,6 +36,6 @@
             <input class="boton" type="submit" value="Continuar">
         </div>
     </div>
-    <script src="/js/usuarios.js"></script>
+    <script src="/js/services/usuarios.js"></script>
 </body>
 </html>
