--- a/src/views/view.datosusuario.ejs
+++ b/src/views/view.datosusuario.ejs
@@ -13,7 +13,7 @@
     <div class="container-fluid">
         <div class="row">
             <%- include('./components/menu'); %>
-            <div class="content col-md-10">
+            <div class="content col-10">
                 <div class="card m-1 d-flex flex-">
                     <div class="card-header">
                         <h1>Gestión de Backups de Usuarios</h1>
