--- a/src/views/views.perfil.ejs
+++ b/src/views/views.perfil.ejs
@@ -1,187 +1,196 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>  
+
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Accesos</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/perfil.css">
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <script src="https://kit.fontawesome.com/58e42bf76d.js" crossorigin="anonymous"></script>
 </head>
-<body>
-    <header>
-        <nav>
-            <div class="nav__item">
-                <i class='bx bxs-bell' id="abrir"></i>
-                <i class='bx bxs-user-circle' id="config"></i>
-             </div>
-        </nav>
-    </header>
-    <div class="caja__notifica" id="notificaciones">
-        <div class="noti__main">
-            <div class="noti__head">
-                <p>Notificaciones</p>
-            </div>
-            <div class="noti__body">
-                <p>Borrar Notificaciones</p>
-            </div>
-            <div class="noti__footer">
-                <div class="toggle-container">
-                    <label for="toggle-switch" class="toggle-label">Desahabilitar notificaciones</label>
-                    <input type="checkbox" id="toggle-switch" class="toggle-switch">
-                    <label for="toggle-switch" class="switch"></label>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="config" id="configuracion">
-        <div class="noti__head">
-            <p>Configuración</p>
-        </div>
-        <div class="config__body">
-            <a href="">Autentificación de Dos Factores</a>
-            <a href="">Pongan las opciones aca cansones</a>
-            <a href="" class="cerrarSesion">Cerrar Sesión</a>
-        </div>
-    </div>
-    <main>
-        <div class="main__perfil">
-            <div class="main__img">
-                <div class="img__foto">
-                    <img src="../img/apple.png" alt="" class="circulo">
-                    <div class="circulo__usuario">
-                        <div class="nom">
-                            <p>{Usuario}</p>
-                        </div>
-                        <div class="nom">
-                            <p>{Rol}</p>
-                        </div>
-                    </div>
-                </div>
-                    
-                <div class="perfil__btn">
-                    <div class="arriba">
-                        <a href="/contrasena" class="btna btn btn--azul">Cambiar Contraseña</a>
-                        <a href="/eliminacionCuenta" class="btna btn btn--rojo">Eliminar Cuenta</a>
-                    </div>
-                    <div class="abajo">
-                        <button class="btna btn--gris" id="btna">
-                            Accesos
-                            <i class='bx bxs-down-arrow' id="rotar"></i>
-                        </button>
-                        <button class="btna btn--azul" data-bs-toggle="modal" data-bs-target="#exampleModal">Editar Cuentas Bloqueadas</button>
-                    </div>
-                    <div class="accesos" id="acceso">
-                        <table class="table table-bordered border-dark">
-                            <thead class="head__acce">
-                                <tr>
-                                    <th>Fecha</th>
-                                    <th>Acción</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    <td>{1/09/2024}</td>
-                                    <td>
-                                        <button class="bta btn--azul">Detalles</button>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>{1/09/2024}</td>
-                                    <td>
-                                        <button class="bta btn--azul">Detalles</button>
-                                    </td>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </div>
-                </div>
 
-            </div>
-            
+<body>
+    <div class="container-fluid">
+        <div class="row">
+            <%- include('./components/menu'); %>
+                <div class="col-md-10">
+                    <nav>
+                        <ul>
+                            <i class="fa-solid fa-bell" id="abrir"></i>
+                            <i class="fa-regular fa-circle-user" id="config"></i>
+                        </ul>
+                    </nav>
+                    <div class="box-notification" id="notificaciones">
+                        <div class="noti__head">
+                            <p>Notificaciones</p>
+                        </div>
+                        <div class="noti__body">
+                            <p>Borrar Notificaciones</p>
+                        </div>
+                        <div class="noti__footer">
+                            <div class="toggle-container">
+                                <label for="toggle-switch" class="toggle-label">Desahabilitar notificaciones</label>
+                                <input type="checkbox" id="toggle-switch" class="toggle-switch">
+                                <label for="toggle-switch" class="switch"></label>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="config" id="configuracion">
+                        <div class="noti__head">
+                            <p>Configuración</p>
+                        </div>
+                        <div class="config__body">
+                            <a href="">Autentificación de Dos Factores</a>
+                            <a href="">Pongan las opciones aca cansones</a>
+                            <a href="" class="cerrarSesion">Cerrar Sesión</a>
+                        </div>
+                    </div>
+                    <main>
+                        <div class="main__perfil">
+                            <div class="main__img">
+                                <div class="img__foto">
+                                    <img src="../img/apple.png" alt="" class="circulo">
+                                    <div class="circulo__usuario">
+                                        <div class="nom">
+                                            <p>{Usuario}</p>
+                                        </div>
+                                        <div class="nom">
+                                            <p>{Rol}</p>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="perfil__btn">
+                                    <div class="arriba">
+                                        <a href="/contrasena" class="btna btn btn--azul">Cambiar Contraseña</a>
+                                        <a href="/eliminacionCuenta" class="btna btn btn--rojo">Eliminar Cuenta</a>
+                                    </div>
+                                    <div class="abajo">
+                                        <button class="btna btn--gris" id="btna">
+                                            Accesos
+                                            <i class='bx bxs-down-arrow' id="rotar"></i>
+                                        </button>
+                                        <button class="btna btn--azul" data-bs-toggle="modal"
+                                            data-bs-target="#exampleModal">Editar
+                                            Cuentas Bloqueadas</button>
+                                    </div>
+                                    <div class="accesos" id="acceso">
+                                        <table class="table table-bordered border-dark">
+                                            <thead class="head__acce">
+                                                <tr>
+                                                    <th>Fecha</th>
+                                                    <th>Acción</th>
+                                                </tr>
+                                            </thead>
+                                            <tbody>
+                                                <tr>
+                                                    <td>{1/09/2024}</td>
+                                                    <td>
+                                                        <button class="bta btn--azul">Detalles</button>
+                                                    </td>
+                                                </tr>
+                                                <tr>
+                                                    <td>{1/09/2024}</td>
+                                                    <td>
+                                                        <button class="bta btn--azul">Detalles</button>
+                                                    </td>
+                                                </tr>
+                                            </tbody>
+                                        </table>
+                                    </div>
+                                </div>
+
+                            </div>
+
+                        </div>
+
+                    </main>
+                    <!-- INICIO MODAL -->
+                    <!-- Modal -->
+                    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                        aria-hidden="true">
+                        <div class="modal-dialog">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h1 class="modal-title fs-5" id="exampleModalLabel">Configuración</h1>
+                                    <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                        aria-label="Close"></button>
+                                </div>
+                                <div class="modal-body">
+                                    <div class="text">
+                                        <p>Indica la cantidad de accesos incorrectos para bloquear la cuenta</p>
+                                    </div>
+                                    <div class="contador">
+                                        <i class='bx bx-minus-circle mas' id="min"></i>
+                                        <input type="text" class="resul" readonly>
+                                        <i class='bx bx-plus mas' id="max"></i>
+                                    </div>
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-primary">Confirmar</button>
+                                    <button type="button" class="btn btn-secondary btn--can"
+                                        data-bs-dismiss="modal">Cancelar</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
         </div>
-        
-    </main>
-    <!-- INICIO MODAL -->
-        <!-- Modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h1 class="modal-title fs-5" id="exampleModalLabel">Configuración</h1>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div class="modal-body">
-            <div class="text">
-                <p>Indica la cantidad de accesos incorrectos para bloquear la cuenta</p>
-            </div>
-            <div class="contador">
-                <i class='bx bx-minus-circle mas' id="min"></i>
-                <input type="text" class="resul" readonly>
-                <i class='bx bx-plus mas' id="max"></i>
-            </div>
-        </div>
-        <div class="modal-footer">
-            <button type="button" class="btn btn-primary">Confirmar</button>
-          <button type="button" class="btn btn-secondary btn--can" data-bs-dismiss="modal">Cancelar</button>
-        </div>
-      </div>
     </div>
-  </div>
-  
-    <!-- FIN MODAL -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 <script>
     // ACA ES PARA ABRIR LAS NOTIFICACIONES
     const abrir = document.getElementById('abrir');
     const notificaciones = document.getElementById('notificaciones');
 
-    abrir.addEventListener('click', () =>{
+    abrir.addEventListener('click', () => {
         notificaciones.classList.toggle('active')
 
     })
 
     document.addEventListener("click", (event) => {
-      const isClickInside =
-      notificaciones.contains(event.target) ||
-      abrir.contains(event.target);
+        const isClickInside =
+            notificaciones.contains(event.target) ||
+            abrir.contains(event.target);
 
-      if (!isClickInside) {
-        notificaciones.classList.remove("active");
-      }
+        if (!isClickInside) {
+            notificaciones.classList.remove("active");
+        }
     });
-// ABRIR LOS ACCESOS DE LA TABLA
-const acceso = document.getElementById('btna');
-const abriracceso = document.getElementById('acceso');
-const rotar = document.getElementById('rotar');
-acceso.addEventListener('click', () =>{
-    abriracceso.classList.toggle('active');
-    rotar.classList.toggle('icono');
-    // elemento.style.transform = "rotate(180deg)";
-})
+    // ABRIR LOS ACCESOS DE LA TABLA
+    const acceso = document.getElementById('btna');
+    const abriracceso = document.getElementById('acceso');
+    const rotar = document.getElementById('rotar');
+    acceso.addEventListener('click', () => {
+        abriracceso.classList.toggle('active');
+        rotar.classList.toggle('icono');
+        // elemento.style.transform = "rotate(180deg)";
+    })
 
-// INCREMENTO Y DECREMENTO DE LOS ICONOS
-let contador = 0
-const max = document.getElementById('max');
-const min = document.getElementById('min');
+    // INCREMENTO Y DECREMENTO DE LOS ICONOS
+    let contador = 0
+    const max = document.getElementById('max');
+    const min = document.getElementById('min');
 
     const abrirConfig = document.getElementById('config');
     const configuracion = document.getElementById('configuracion');
 
-    abrirConfig.addEventListener('click', () =>{
+    abrirConfig.addEventListener('click', () => {
         configuracion.classList.toggle('activeC')
 
     })
 
     document.addEventListener("click", (event) => {
-      const isClickInside =
-      configuracion.contains(event.target) ||
-      abrirConfig.contains(event.target);
+        const isClickInside =
+            configuracion.contains(event.target) ||
+            abrirConfig.contains(event.target);
 
-      if (!isClickInside) {
-        configuracion.classList.remove("activeC");
-      }
+        if (!isClickInside) {
+            configuracion.classList.remove("activeC");
+        }
     });
 
     // document.addEventListener('DOMContentLoaded', ()=>{
@@ -190,18 +199,18 @@ const min = document.getElementById('min');
     //     notificaciones.style.display = '';
     // }
     // })
-    
-max.addEventListener('click', function (){
-    contador++;
-    document.querySelector('.resul').value = contador;
-})
 
-min.addEventListener('click', function (){
-    if(contador>0){
-        contador--;
+    max.addEventListener('click', function () {
+        contador++;
         document.querySelector('.resul').value = contador;
-    }
-})
+    })
 
+    min.addEventListener('click', function () {
+        if (contador > 0) {
+            contador--;
+            document.querySelector('.resul').value = contador;
+        }
+    })
 </script>
+
 </html>
